syntax = "proto3";

import "common.proto";

option java_package = "com.graduate.design.proto";
option java_outer_classname="GetNode";
option go_package = "./pb_gen";

message GetNodeRequest{
    int64 nodeId = 1; // 节点id

    BaseReq baseReq = 255;
}

message GetNodeResponse{
    Node node = 1; // 节点

    BaseResp baseResp = 255;    
}