syntax = "proto3";

import "common.proto";

option java_package = "com.graduate.design.proto";
option java_outer_classname="Ping";
option go_package = "./pb_gen";

message PingRequest{
    string name = 1;

    BaseReq baseReq = 255;
}

message PingResponse{
    string msg = 1;

    BaseResp BaseResp = 255;
}